--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -5,21 +5,16 @@ body{
 .para,
 .small-para {
   color: hsl(0, 0%, 0%);
-}
-
-.small-para {
-  font-size: 14px;
+  font-weight: 700;
 }
 
 .para {
   font-size: 22px;
 }
 
-.confirm {
-  background: green;
-  color: white;
-  font-weight: bold;
-} 
+.small-para {
+  font-size: 14px;
+}
 
 .button {
   background-color: rgb(255, 255, 255);
@@ -27,9 +22,16 @@ body{
   font-size: 20px;
 }
 
-.child {
+#confirm-button {
+  background: green;
+  color: white;
+  font-weight: bold;
+} 
+
+.text.child {
   color: rgb(0, 0, 0);
   font-size: 14px;
+  font-weight: 700;
 }
 
 div.text {
