--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,26 +7,34 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
-  padding: 5px;
+  box-sizing: border-box;
+  padding: 5px 0px; 
 }
 
 .title {
   background: #e3f4ff;
   padding: 10px 80px 10px 10px;
-  margin: 5px;
+  margin: 10px;
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
   padding: 20px 10px;
-  margin: 5px;
+  margin: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 10px 10px;
+  margin: 10px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  padding: 10px 30px;
+  margin: auto;
 }
